@@ -2,6 +2,7 @@ package com.main.jfx.gui;
 
 import com.main.jfx.Main;
 import com.main.jfx.gui.util.Alerts;
+import com.main.jfx.model.services.DepartmentService;
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
 import javafx.fxml.Initializable;
@@ -33,7 +34,7 @@ public class MainViewController implements Initializable {
     }
     @FXML
     public void onMenuItemDepartmentAction() {
-        loadView("/com/main/jfx/department/DepartmentList.fxml");
+        loadView2("/com/main/jfx/department/DepartmentList.fxml");
     }
     @FXML
     public void onMenuItemAboutAction() {
@@ -53,10 +54,31 @@ public class MainViewController implements Initializable {
             Scene mainScene = Main.getScene();
             VBox mainVbox = (VBox) ((ScrollPane) mainScene.getRoot()).getContent();
 
-            Node mainMenu = mainVbox.getChildren().get(0);
+            Node mainMenu = mainVbox.getChildren().getFirst();
             mainVbox.getChildren().clear();
             mainVbox.getChildren().add(mainMenu);
             mainVbox.getChildren().addAll(newVBox.getChildren());
+
+        } catch (IOException e) {
+            Alerts.showAlert("IO Exception", "Error loading view", e.getMessage(), Alert.AlertType.ERROR);
+        }
+    }
+    private synchronized void loadView2(String absoluteName) {
+        try {
+            FXMLLoader loader = new FXMLLoader(getClass().getResource(absoluteName));
+            VBox newVBox = loader.load();
+
+            Scene mainScene = Main.getScene();
+            VBox mainVbox = (VBox) ((ScrollPane) mainScene.getRoot()).getContent();
+
+            Node mainMenu = mainVbox.getChildren().getFirst();
+            mainVbox.getChildren().clear();
+            mainVbox.getChildren().add(mainMenu);
+            mainVbox.getChildren().addAll(newVBox.getChildren());
+
+            DepartmentListController controller = loader.getController();
+            controller.setDepartmentService(new DepartmentService());
+            controller.updateTableView();
 
         } catch (IOException e) {
             Alerts.showAlert("IO Exception", "Error loading view", e.getMessage(), Alert.AlertType.ERROR);
